[package]
name = "encedeus_js_runtime"
version = "0.1.0-alpha"
authors = ["csh <458761603@qq.com>", "Michael Yuan <michael@secondstate.io>"]
description = "Fork of wasmedge-quickjs engine for Encedeus panel."
repository = "https://github.com/Encedeus/wasmedge-quickjs"
license = "MIT OR Apache-2.0"
readme = "README.md"
edition = "2018"
exclude = ["example_js/*", "examples/*"]

[dependencies]
argparse = "0.2.2"
image = { version = "0.23.6", default-features = false, features = [
    "jpeg",
    "png",
], optional = true }
imageproc = { version = "0.22.0", optional = true }
libc = "0.2"
url = "2.2.2"
lazy_static = "1.4"
encoding = "0.2"
include_dir = "0.7.3"

[features]
default = []
img = ["image", "imageproc"]
tensorflow = ["img"]
wasi_nn = ["img"]
cjs = []
